# cpi-latam

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  peru_parser.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml  publish.yml
cpilatam/: __init__.py  exc.py  logger.py  names.py  schemas.py  settings.py
cpilatam/data/: peru.csv
cpilatam/parsers/: __init__.py  base.py  chile.py  colombia.py  peru.py
data/: colombia_cpi.xlsx  peru.csv
data/clean/: colombia.csv
data/raw/: chile.xlsx
tests/: test_colombia.py  test_cpilatam.py  test_import.py  test_peru.py
tests/data/: chile-1928-2009.xls  peru.csv
tests/parsers/: test_colombia.py  test_peru.py
